// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomCell component CustomCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <span
            class="gds-typography"
          >
            customRender
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CustomCell component CustomCell renders in edit mode and handles change 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <span
            class="gds-typography"
          >
            customRenderEdit
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CustomCell component CustomCell renders in edit mode via extra 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <span
            class="gds-typography"
          >
            customRenderEdit
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CustomCell component CustomCell renders when hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          <span
            class="gds-typography"
          >
            customRender
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CustomCell component CustomCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <span
            class="gds-typography"
          >
            FORCEDVALUE
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CustomCell component CustomCell renders without forced value and without row 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <span
            class="gds-typography"
          >
            -
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
